# xiaoai-home

./: .dockerignore  .gitignore  Dockerfile  README.md  create_branch.bat  create_new_repo.bat  docker-compose-github.yml  docker-compose-portainer.yml  docker-compose.yml  make_public.bat  new_repo.bat  push_fix.bat  push_main.bat  push_to_new.bat  pyproject.toml
config/: config-example.json
src/xiaoai_ha_bridge/: __init__.py  main.py
src/xiaoai_ha_bridge/config/: config.py
src/xiaoai_ha_bridge/engine/: interceptor.py  parser.py
src/xiaoai_ha_bridge/ha_client/: client.py
src/xiaoai_ha_bridge/logging/: logger.py
src/xiaoai_ha_bridge/miservice/: poller.py
src/xiaoai_ha_bridge/web/: index.html  routes.py
tests/: test_parser.py
web/: index.html
